// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`require-ensure override should implement default webpack behavior: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`require-ensure override should implement default webpack behavior: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`require-ensure override should implement default webpack behavior: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`require-ensure override should implement default webpack behavior: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`require-ensure override should implement default webpack behavior: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -68,0 +68,2 @@
+/******/ 	function scriptBuilder(src, options, onSuccess, onError) {
+/******/ 	  var script, timeout;
@@ -69,0 +71,104 @@
+/******/ 	  var onScriptComplete = function(error) {
+/******/ 	    onScriptComplete = function() {}; // avoid mem leaks in IE.
+/******/
+/******/ 	    script.onerror = script.onload = script.onreadystatechange = null;
+/******/ 	    clearTimeout(timeout);
+/******/ 	    error ? onError(error) : onSuccess();
+/******/ 	  };
+/******/
+/******/ 	  try {
+/******/ 	    options = extend(
+/******/ 	      {
+/******/ 	        // most compatible type
+/******/ 	        type: 'text/javascript',
+/******/ 	        charset: 'utf-8',
+/******/ 	        timeout: 20,
+/******/ 	        async: true
+/******/ 	      },
+/******/ 	      options
+/******/ 	    );
+/******/ 	    script = document.createElement('script');
+/******/ 	    extend(script, options);
+/******/
+/******/ 	    script.onload = function() {
+/******/ 	      onScriptComplete();
+/******/ 	    };
+/******/
+/******/ 	    timeout = setTimeout(function() {
+/******/ 	      onScriptComplete(error('timeout'));
+/******/ 	    }, options.timeout * 1000);
+/******/
+/******/ 	    script.onerror = function(event) {
+/******/ 	      onScriptComplete(
+/******/ 	        error(event && (event.type === 'load' ? 'missing' : event.type))
+/******/ 	      );
+/******/ 	    };
+/******/
+/******/ 	    script.onreadystatechange = function() {
+/******/ 	      // for compatibility with old IE
+/******/ 	      if (script.readyState === 'complete' || script.readyState === 'loaded') {
+/******/ 	        onScriptComplete(); // there is no way to catch loading errors in IE8
+/******/ 	      }
+/******/ 	    };
+/******/
+/******/ 	    script.src = src;
+/******/ 	  } catch (e) {
+/******/ 	    clearTimeout(timeout);
+/******/ 	    timeout = setTimeout(onScriptComplete, 0, error('script'));
+/******/ 	  }
+/******/
+/******/ 	  return script;
+/******/
+/******/ 	  function error(reason) {
+/******/ 	    var error = new Error('Failed to load resource');
+/******/ 	    error.type = reason;
+/******/ 	    return error;
+/******/ 	  }
+/******/
+/******/ 	  function extend(acc, src) {
+/******/ 	    if (src) {
+/******/ 	      for (var key in src) {
+/******/ 	        if (src.hasOwnProperty(key)) {
+/******/ 	          acc[key] = src[key];
+/******/ 	        }
+/******/ 	      }
+/******/ 	    }
+/******/
+/******/ 	    return acc;
+/******/ 	  }
+/******/ 	}
+/******/
+/******/ 	function scriptUrlResolver(installedChunks, chunkId) {
+/******/ 	  var result = (originalUrl = jsonpScriptSrc(chunkId));
+/******/
+/******/ 	  return result;
+/******/ 	}
+/******/
+/******/ 	function scriptOptionsResolver(installedChunks, chunkId, url) {
+/******/ 	  var result = {};
+/******/
+/******/ 	  result.type = 'module';
+/******/ 	  result.timeout = 60;
+/******/ 	  if (__webpack_require__.nc) {
+/******/ 	    result.nonce = __webpack_require__.nc;
+/******/ 	  }
+/******/ 	  if (url.indexOf(window.location.origin + '/') !== 0) {
+/******/ 	    result.crossOrigin = 'anonymous';
+/******/ 	  }
+/******/
+/******/ 	  return result;
+/******/ 	}
+/******/
+/******/ 	function scriptLoadHandler(installedChunks, chunkId) {
+/******/ 	  var result = null;
+/******/
+/******/ 	  return Promise.resolve(result);
+/******/ 	}
+/******/
+/******/ 	function scriptErrorHandler(installedChunks, chunkId, originalError) {
+/******/ 	  var result = originalError;
+/******/
+/******/ 	  return Promise.reject(result);
+/******/ 	}
+/******/
+/******/
@@ -97,0 +203,15 @@
+/******/ 		var result = (function(
+/******/ 		  installedChunks,
+/******/ 		  chunkId,
+/******/ 		  scriptBuilder,
+/******/ 		  scriptUrlResolver,
+/******/ 		  scriptOptionsResolver,
+/******/ 		  scriptLoadHandler,
+/******/ 		  scriptErrorHandler
+/******/ 		) {
+/******/ 		  // JSONP chunk loading for javascript
+/******/ 		  var INSTALLED = 0;
+/******/ 		  var PROMISE_RESOLVE = 0;
+/******/ 		  var PROMISE_REJECT = 1;
+/******/ 		  var LOAD_PROMISE = 2;
+/******/ 		  var installedChunkData = installedChunks[chunkId];
@@ -98,0 +219,5 @@
+/******/ 		  if (installedChunkData === INSTALLED || installedChunkData) {
+/******/ 		    return installedChunkData === INSTALLED
+/******/ 		      ? Promise.resolve()
+/******/ 		      : installedChunkData[LOAD_PROMISE];
+/******/ 		  }
@@ -99,1 +225,17 @@
-/******/ 		// JSONP chunk loading for javascript
+/******/ 		  var url, options, script, error;
+/******/ 		  installedChunkData = installedChunks[chunkId] = [];
+/******/ 		  installedChunkData[LOAD_PROMISE] = new Promise(function(resolve, reject) {
+/******/ 		    installedChunkData[PROMISE_RESOLVE] = resolve;
+/******/ 		    installedChunkData[PROMISE_REJECT] = reject;
+/******/ 		  })
+/******/ 		    .catch(setError)
+/******/ 		    .then(checkScriptLoaded)
+/******/ 		    .then(onLoad)
+/******/ 		    .catch(onError);
+/******/ 		  Promise.resolve()
+/******/ 		    .then(resolveUrlAndOptions)
+/******/ 		    .then(buildScript)
+/******/ 		    .then(setScript)
+/******/ 		    .then(appendScript)
+/******/ 		    .catch(installedChunkData[PROMISE_REJECT]);
+/******/ 		  return installedChunkData[LOAD_PROMISE];
@@ -101,2 +243,3 @@
-/******/ 		var installedChunkData = installedChunks[chunkId];
-/******/ 		if(installedChunkData !== 0) { // 0 means \\"already installed\\".
+/******/ 		  function checkScriptLoaded() {
+/******/ 		    var chunk = installedChunks[chunkId];
+/******/ 		    var isChunkComplete = chunk === INSTALLED; // ignore any errors if chunk is loaded
@@ -104,9 +247,3 @@
-/******/ 			// a Promise means \\"currently loading\\".
-/******/ 			if(installedChunkData) {
-/******/ 				promises.push(installedChunkData[2]);
-/******/ 			} else {
-/******/ 				// setup Promise in chunk cache
-/******/ 				var promise = new Promise(function(resolve, reject) {
-/******/ 					installedChunkData = installedChunks[chunkId] = [resolve, reject];
-/******/ 				});
-/******/ 				promises.push(installedChunkData[2] = promise);
+/******/ 		    if (isChunkComplete) {
+/******/ 		      return;
+/******/ 		    }
@@ -114,3 +251,7 @@
-/******/ 				// start chunk loading
-/******/ 				var script = document.createElement('script');
-/******/ 				var onScriptComplete;
+/******/ 		    installedChunks[chunkId] = undefined;
+/******/ 		    error = error || new Error('Failed to load resource');
+/******/ 		    error.type = error.type || 'missing';
+/******/ 		    error.request = script.src;
+/******/ 		    error.chunkId = chunkId;
+/******/ 		    throw error;
+/******/ 		  }
@@ -118,6 +259,9 @@
-/******/ 				script.charset = 'utf-8';
-/******/ 				script.timeout = 120;
-/******/ 				if (__webpack_require__.nc) {
-/******/ 					script.setAttribute(\\"nonce\\", __webpack_require__.nc);
-/******/ 				}
-/******/ 				script.src = jsonpScriptSrc(chunkId);
+/******/ 		  function buildScript() {
+/******/ 		    // scriptBuilder can be asynchronous for old school strategies like \`blob loading\`
+/******/ 		    return scriptBuilder(
+/******/ 		      url,
+/******/ 		      options,
+/******/ 		      installedChunkData[PROMISE_RESOLVE],
+/******/ 		      installedChunkData[PROMISE_REJECT]
+/******/ 		    );
+/******/ 		  }
@@ -125,23 +269,35 @@
-/******/ 				onScriptComplete = function (event) {
-/******/ 					// avoid mem leaks in IE.
-/******/ 					script.onerror = script.onload = null;
-/******/ 					clearTimeout(timeout);
-/******/ 					var chunk = installedChunks[chunkId];
-/******/ 					if(chunk !== 0) {
-/******/ 						if(chunk) {
-/******/ 							var errorType = event && (event.type === 'load' ? 'missing' : event.type);
-/******/ 							var realSrc = event && event.target && event.target.src;
-/******/ 							var error = new Error('Loading chunk ' + chunkId + ' failed.\\\\n(' + errorType + ': ' + realSrc + ')');
-/******/ 							error.type = errorType;
-/******/ 							error.request = realSrc;
-/******/ 							chunk[1](error);
-/******/ 						}
-/******/ 						installedChunks[chunkId] = undefined;
-/******/ 					}
-/******/ 				};
-/******/ 				var timeout = setTimeout(function(){
-/******/ 					onScriptComplete({ type: 'timeout', target: script });
-/******/ 				}, 120000);
-/******/ 				script.onerror = script.onload = onScriptComplete;
-/******/ 				document.head.appendChild(script);
-/******/ 			}
+/******/ 		  function resolveUrlAndOptions() {
+/******/ 		    url = scriptUrlResolver(installedChunks, chunkId);
+/******/ 		    options = scriptOptionsResolver(installedChunks, chunkId, url);
+/******/ 		  }
+/******/
+/******/ 		  function appendScript() {
+/******/ 		    document.getElementsByTagName('head')[0].appendChild(script);
+/******/ 		  }
+/******/
+/******/ 		  function setError(_error) {
+/******/ 		    error = _error;
+/******/ 		  }
+/******/
+/******/ 		  function setScript(_script) {
+/******/ 		    script = _script;
+/******/ 		  }
+/******/
+/******/ 		  function onLoad() {
+/******/ 		    return scriptLoadHandler(installedChunks, chunkId);
+/******/ 		  }
+/******/
+/******/ 		  function onError(error) {
+/******/ 		    return scriptErrorHandler(installedChunks, chunkId, error);
+/******/ 		  }
+/******/ 		})(
+/******/ 		  installedChunks,
+/******/ 		  chunkId,
+/******/ 		  scriptBuilder,
+/******/ 		  scriptUrlResolver,
+/******/ 		  scriptOptionsResolver,
+/******/ 		  scriptLoadHandler,
+/******/ 		  scriptErrorHandler
+/******/ 		);
+/******/ 		if (result) {
+/******/ 		  promises.push.apply(promises, [].concat(result));
"
`;

exports[`require-ensure override should skip defaults on custom behavior: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`require-ensure override should skip defaults on custom behavior: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`require-ensure override should skip defaults on custom behavior: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`require-ensure override should skip defaults on custom behavior: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`require-ensure override should skip defaults on custom behavior: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -68,0 +68,2 @@
+/******/ 	function scriptBuilder(src, options, onSuccess, onError) {
+/******/ 	  var script, timeout;
@@ -69,0 +71,95 @@
+/******/ 	  var onScriptComplete = function(error) {
+/******/ 	    onScriptComplete = function() {}; // avoid mem leaks in IE.
+/******/
+/******/ 	    script.onerror = script.onload = script.onreadystatechange = null;
+/******/ 	    clearTimeout(timeout);
+/******/ 	    error ? onError(error) : onSuccess();
+/******/ 	  };
+/******/
+/******/ 	  try {
+/******/ 	    options = extend(
+/******/ 	      {
+/******/ 	        // most compatible type
+/******/ 	        type: 'text/javascript',
+/******/ 	        charset: 'utf-8',
+/******/ 	        timeout: 20,
+/******/ 	        async: true
+/******/ 	      },
+/******/ 	      options
+/******/ 	    );
+/******/ 	    script = document.createElement('script');
+/******/ 	    extend(script, options);
+/******/
+/******/ 	    script.onload = function() {
+/******/ 	      onScriptComplete();
+/******/ 	    };
+/******/
+/******/ 	    timeout = setTimeout(function() {
+/******/ 	      onScriptComplete(error('timeout'));
+/******/ 	    }, options.timeout * 1000);
+/******/
+/******/ 	    script.onerror = function(event) {
+/******/ 	      onScriptComplete(
+/******/ 	        error(event && (event.type === 'load' ? 'missing' : event.type))
+/******/ 	      );
+/******/ 	    };
+/******/
+/******/ 	    script.onreadystatechange = function() {
+/******/ 	      // for compatibility with old IE
+/******/ 	      if (script.readyState === 'complete' || script.readyState === 'loaded') {
+/******/ 	        onScriptComplete(); // there is no way to catch loading errors in IE8
+/******/ 	      }
+/******/ 	    };
+/******/
+/******/ 	    script.src = src;
+/******/ 	  } catch (e) {
+/******/ 	    clearTimeout(timeout);
+/******/ 	    timeout = setTimeout(onScriptComplete, 0, error('script'));
+/******/ 	  }
+/******/
+/******/ 	  return script;
+/******/
+/******/ 	  function error(reason) {
+/******/ 	    var error = new Error('Failed to load resource');
+/******/ 	    error.type = reason;
+/******/ 	    return error;
+/******/ 	  }
+/******/
+/******/ 	  function extend(acc, src) {
+/******/ 	    if (src) {
+/******/ 	      for (var key in src) {
+/******/ 	        if (src.hasOwnProperty(key)) {
+/******/ 	          acc[key] = src[key];
+/******/ 	        }
+/******/ 	      }
+/******/ 	    }
+/******/
+/******/ 	    return acc;
+/******/ 	  }
+/******/ 	}
+/******/
+/******/ 	function scriptUrlResolver(installedChunks, chunkId) {
+/******/ 	  var result = (originalUrl = jsonpScriptSrc(chunkId));
+/******/
+/******/ 	  return result;
+/******/ 	}
+/******/
+/******/ 	function scriptOptionsResolver(installedChunks, chunkId, url) {
+/******/ 	  var result = {};
+/******/
+/******/ 	  return result;
+/******/ 	}
+/******/
+/******/ 	function scriptLoadHandler(installedChunks, chunkId) {
+/******/ 	  var result = null;
+/******/
+/******/ 	  return Promise.resolve(result);
+/******/ 	}
+/******/
+/******/ 	function scriptErrorHandler(installedChunks, chunkId, originalError) {
+/******/ 	  var result = originalError;
+/******/
+/******/ 	  return Promise.reject(result);
+/******/ 	}
+/******/
+/******/
@@ -97,0 +194,15 @@
+/******/ 		var result = (function(
+/******/ 		  installedChunks,
+/******/ 		  chunkId,
+/******/ 		  scriptBuilder,
+/******/ 		  scriptUrlResolver,
+/******/ 		  scriptOptionsResolver,
+/******/ 		  scriptLoadHandler,
+/******/ 		  scriptErrorHandler
+/******/ 		) {
+/******/ 		  // JSONP chunk loading for javascript
+/******/ 		  var INSTALLED = 0;
+/******/ 		  var PROMISE_RESOLVE = 0;
+/******/ 		  var PROMISE_REJECT = 1;
+/******/ 		  var LOAD_PROMISE = 2;
+/******/ 		  var installedChunkData = installedChunks[chunkId];
@@ -98,0 +210,5 @@
+/******/ 		  if (installedChunkData === INSTALLED || installedChunkData) {
+/******/ 		    return installedChunkData === INSTALLED
+/******/ 		      ? Promise.resolve()
+/******/ 		      : installedChunkData[LOAD_PROMISE];
+/******/ 		  }
@@ -99,1 +216,17 @@
-/******/ 		// JSONP chunk loading for javascript
+/******/ 		  var url, options, script, error;
+/******/ 		  installedChunkData = installedChunks[chunkId] = [];
+/******/ 		  installedChunkData[LOAD_PROMISE] = new Promise(function(resolve, reject) {
+/******/ 		    installedChunkData[PROMISE_RESOLVE] = resolve;
+/******/ 		    installedChunkData[PROMISE_REJECT] = reject;
+/******/ 		  })
+/******/ 		    .catch(setError)
+/******/ 		    .then(checkScriptLoaded)
+/******/ 		    .then(onLoad)
+/******/ 		    .catch(onError);
+/******/ 		  Promise.resolve()
+/******/ 		    .then(resolveUrlAndOptions)
+/******/ 		    .then(buildScript)
+/******/ 		    .then(setScript)
+/******/ 		    .then(appendScript)
+/******/ 		    .catch(installedChunkData[PROMISE_REJECT]);
+/******/ 		  return installedChunkData[LOAD_PROMISE];
@@ -101,2 +234,3 @@
-/******/ 		var installedChunkData = installedChunks[chunkId];
-/******/ 		if(installedChunkData !== 0) { // 0 means \\"already installed\\".
+/******/ 		  function checkScriptLoaded() {
+/******/ 		    var chunk = installedChunks[chunkId];
+/******/ 		    var isChunkComplete = chunk === INSTALLED; // ignore any errors if chunk is loaded
@@ -104,9 +238,3 @@
-/******/ 			// a Promise means \\"currently loading\\".
-/******/ 			if(installedChunkData) {
-/******/ 				promises.push(installedChunkData[2]);
-/******/ 			} else {
-/******/ 				// setup Promise in chunk cache
-/******/ 				var promise = new Promise(function(resolve, reject) {
-/******/ 					installedChunkData = installedChunks[chunkId] = [resolve, reject];
-/******/ 				});
-/******/ 				promises.push(installedChunkData[2] = promise);
+/******/ 		    if (isChunkComplete) {
+/******/ 		      return;
+/******/ 		    }
@@ -114,3 +242,7 @@
-/******/ 				// start chunk loading
-/******/ 				var script = document.createElement('script');
-/******/ 				var onScriptComplete;
+/******/ 		    installedChunks[chunkId] = undefined;
+/******/ 		    error = error || new Error('Failed to load resource');
+/******/ 		    error.type = error.type || 'missing';
+/******/ 		    error.request = script.src;
+/******/ 		    error.chunkId = chunkId;
+/******/ 		    throw error;
+/******/ 		  }
@@ -118,6 +250,9 @@
-/******/ 				script.charset = 'utf-8';
-/******/ 				script.timeout = 120;
-/******/ 				if (__webpack_require__.nc) {
-/******/ 					script.setAttribute(\\"nonce\\", __webpack_require__.nc);
-/******/ 				}
-/******/ 				script.src = jsonpScriptSrc(chunkId);
+/******/ 		  function buildScript() {
+/******/ 		    // scriptBuilder can be asynchronous for old school strategies like \`blob loading\`
+/******/ 		    return scriptBuilder(
+/******/ 		      url,
+/******/ 		      options,
+/******/ 		      installedChunkData[PROMISE_RESOLVE],
+/******/ 		      installedChunkData[PROMISE_REJECT]
+/******/ 		    );
+/******/ 		  }
@@ -125,23 +260,35 @@
-/******/ 				onScriptComplete = function (event) {
-/******/ 					// avoid mem leaks in IE.
-/******/ 					script.onerror = script.onload = null;
-/******/ 					clearTimeout(timeout);
-/******/ 					var chunk = installedChunks[chunkId];
-/******/ 					if(chunk !== 0) {
-/******/ 						if(chunk) {
-/******/ 							var errorType = event && (event.type === 'load' ? 'missing' : event.type);
-/******/ 							var realSrc = event && event.target && event.target.src;
-/******/ 							var error = new Error('Loading chunk ' + chunkId + ' failed.\\\\n(' + errorType + ': ' + realSrc + ')');
-/******/ 							error.type = errorType;
-/******/ 							error.request = realSrc;
-/******/ 							chunk[1](error);
-/******/ 						}
-/******/ 						installedChunks[chunkId] = undefined;
-/******/ 					}
-/******/ 				};
-/******/ 				var timeout = setTimeout(function(){
-/******/ 					onScriptComplete({ type: 'timeout', target: script });
-/******/ 				}, 120000);
-/******/ 				script.onerror = script.onload = onScriptComplete;
-/******/ 				document.head.appendChild(script);
-/******/ 			}
+/******/ 		  function resolveUrlAndOptions() {
+/******/ 		    url = scriptUrlResolver(installedChunks, chunkId);
+/******/ 		    options = scriptOptionsResolver(installedChunks, chunkId, url);
+/******/ 		  }
+/******/
+/******/ 		  function appendScript() {
+/******/ 		    document.getElementsByTagName('head')[0].appendChild(script);
+/******/ 		  }
+/******/
+/******/ 		  function setError(_error) {
+/******/ 		    error = _error;
+/******/ 		  }
+/******/
+/******/ 		  function setScript(_script) {
+/******/ 		    script = _script;
+/******/ 		  }
+/******/
+/******/ 		  function onLoad() {
+/******/ 		    return scriptLoadHandler(installedChunks, chunkId);
+/******/ 		  }
+/******/
+/******/ 		  function onError(error) {
+/******/ 		    return scriptErrorHandler(installedChunks, chunkId, error);
+/******/ 		  }
+/******/ 		})(
+/******/ 		  installedChunks,
+/******/ 		  chunkId,
+/******/ 		  scriptBuilder,
+/******/ 		  scriptUrlResolver,
+/******/ 		  scriptOptionsResolver,
+/******/ 		  scriptLoadHandler,
+/******/ 		  scriptErrorHandler
+/******/ 		);
+/******/ 		if (result) {
+/******/ 		  promises.push.apply(promises, [].concat(result));
"
`;
